--- a/calc.html
+++ b/calc.html
@@ -33,7 +33,7 @@
             <div class="row">
               <div class="dropdown">
                 <button class="trigonometry-function dropdown-btn column-2 btn">
-                  <img src="./Trigonometry.png" alt="trigo-icon" />
+                  <img src="./Trigonometry.png" alt="trigonometry-icon" />
                   Trigonometry
                 </button>
                 <div class="dropdown-chart-1">
