Calculator make changes

--- a/calc.html
+++ b/calc.html
@@ -26,7 +26,7 @@
               <div id="memory-clear" class="btn">MC</div>
               <div id="memory-recall" class="btn">MR</div>
               <div id="memory-plus" class="btn memory">M+</div>
-              <div id="memoy-minus" class="btn memory">M-</div>
+              <div id="memory-minus" class="btn memory">M-</div>
               <div id="memory-stored" class="btn memory">MS</div>
             </div>
             <!-- row-3 -->
@@ -92,7 +92,7 @@
           <div class="row second">
             <div id="pow" class="btn">x<sup>y</sup></div>
             <!-- x root y with unicode -->
-            <div id="x-root-y" class="btn hide"><sup>y</sup>&radic;x</div>
+            <div id="x-raised-y" class="btn hide"><sup>y</sup>&radic;x</div>
             <div id="seven" class="btn number">7</div>
             <div id="eight" class="btn number">8</div>
             <div id="nine" class="btn number">9</div>
