--- a/calc.html
+++ b/calc.html
@@ -49,10 +49,10 @@
                   Function
                 </button>
                 <div class="dropdown-chart-2">
-                  <div class="btn" id="Ceil">Ceil</div>
-                  <div class="btn" id="Round">Floor</div>
-                  <div class="btn" id="Floor">Round</div>
-                  <div class="btn" id="Absolute">Absolute</div>
+                  <div class="btn" id="ceil">Ceil</div>
+                  <div class="btn" id="floor">Floor</div>
+                  <div class="btn" id="round">Round</div>
+                  <div class="btn" id="absolute">Absolute</div>
                 </div>
               </div>
             </div>
